Fixed 1px overspill of the main container caused by all around padding.

--- a/styles/shCore.css
+++ b/styles/shCore.css
@@ -36,7 +36,6 @@
 .syntaxhighlighter {
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
-  padding: 1px !important;
   position: relative !important;
   overflow: auto !important;
   font-size: 1em !important;
